--- a/public/app.css
+++ b/public/app.css
@@ -19178,9 +19178,9 @@ input[type=radio].sr-only:checked ~ div.s-product-options-donation-amount-curren
 .s-progress-bar-progress{height:100%;border-radius:9999px;--tw-bg-opacity:1;background-color:rgba(37, 99, 235, 1);background-color:rgba(37, 99, 235, var(--tw-bg-opacity))}
 .s-progress-bar-message{margin-bottom:0.625rem;display:block;font-size:0.875rem;line-height:1.25rem;--tw-text-opacity:1;color:rgba(248, 113, 113, 1);color:rgba(248, 113, 113, var(--tw-text-opacity))}
 .s-progress-bar-wrapper .s-progress-bar-progress-stripped{background-image:linear-gradient(-45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%,rgba(255, 255, 255, .2) 50%,rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);background-size:30px 30px}
-.s-quantity-input-container{display:flex;height:2.5rem;align-items:stretch;justify-content:space-around;border-radius:0.375rem;border-width:1px;font-size:0.875rem;line-height:1.25rem;
-  border: 1px solid #dee2e6;
-  border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color)}
+.s-quantity-input-container{display:flex;height:2.5rem;align-items:stretch;justify-content:space-around;border-radius:0.375rem;border-width:0px;font-size:0.875rem;line-height:1.25rem;
+}
+
 .s-quantity-input-input{width:3rem;border-width:1px;border-top-width:0px;border-bottom-width:0px;--tw-border-opacity:1;border-color:rgba(229, 231, 235, 1);border-color:rgba(229, 231, 235, var(--tw-border-opacity));font-weight:700;--tw-shadow:0 0 rgba(0,0,0,0);--tw-shadow-colored:0 0 rgba(0,0,0,0);box-shadow:0 0 rgba(0,0,0,0), 0 0 rgba(0,0,0,0), 0 0 rgba(0,0,0,0);box-shadow:var(--tw-ring-offset-shadow, 0 0 rgba(0,0,0,0)), var(--tw-ring-shadow, 0 0 rgba(0,0,0,0)), var(--tw-shadow);
   box-shadow: none;
   border: 1px solid #dee2e6;
@@ -20639,7 +20639,6 @@ input[type=radio].sr-only:checked ~ div.s-verify-back {
   --main-text-color: #231f1e;
   --main-text-color-dark: #2b2d34;
   /* current */
-  --color-primary: #5cd5c4;
   --color-primary: #414042;
   --color-primary-d: #272628;
   --color-primary-l: #676668;
