--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -381,8 +381,8 @@
 
 
 
-                              
-                             
+                        <div class="col-lg-6">
+                          <div class="container">
                                 <div class="ezdan-product-hero-content pe-lg-4">
                                  
                                      <div class="ezdan-price-tax-buttons d-flex align-items-center pt-4">
@@ -419,15 +419,9 @@
                                       </salla-add-product-button>
 
 
+                                   
+                                    
 
-
-                                        </div>
-                                        <div class="ezdan-buy-btn">
-                                          
-                                          <salla-quick-order class="mt-5 md:-mb-2 block"></salla-quick-order>
-                                        </div><br>
-                                      </div><br>
-                                    </div>
                                  
                                 </div>
                               </div>
