--- a/src/views/components/header/menu.twig
+++ b/src/views/components/header/menu.twig
@@ -19,7 +19,7 @@
         {% endfor %}</li>
     </ul>
   
-    <button class="btn--close close-mobile-menu sicon-cancel lg:hidden"></button>
+    <button class="btn--close close-mobile-menu sicon-cancel lg:hidden">بب</button>
 </nav>
-<button class="btn--close-sm close-mobile-menu sicon-cancel hidden"></button>
+<button class="btn--close-sm close-mobile-menu sicon-cancel hidden">بب</button>
 
