--- a/src/views/components/TextwithOrangIcon.twig
+++ b/src/views/components/TextwithOrangIcon.twig
@@ -13,7 +13,7 @@
                   {{orangtext.TextwithOrangIconstring}}
         </h3>
       
-        <div class="ezdan-arrow-down-icon pt-md-5 mt-4">
+        <div class="ezdan-arrow-down-icon mt-4">
             <img 
               draggable="false"
               src="{{orangtext.TextwithOrangIconimage}}"
