--- a/src/views/components/ezdan-MainSLiderhero.twig
+++ b/src/views/components/ezdan-MainSLiderhero.twig
@@ -32,7 +32,7 @@
             <div class="ezdan-slider-conent">
                 <div class=" w-4/6 text-center md:w-7/12 lg:w-5/12 text-white">
                    
-                    <h2 data-swiper-parallax="-500" class="lg:text-title-size font-bold leading-tight mb-4">{{ slide.string }}</h2>
+                    <h2 data-swiper-parallax="-500" class="lg:text-title-size font-bold leading-tight mb-1 mb-lg-4">{{ slide.string }}</h2>
                     <p data-swiper-parallax="-300" class="line-clamp-2 description">{{ slide.text_area }}</p>
                  
                     <div data-swiper-parallax="-500" class="ezdan-hero-btn">
