--- a/public/app.css
+++ b/public/app.css
@@ -14197,6 +14197,7 @@ h2.title {
   
     .ezdan-main-nav.active {
       right: 0;
+      background-color: #371a08;
     }
   
     .ezdan-main-menu ul li {
