--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -42,7 +42,19 @@
           </ul>
           <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
             <li class="d-xl-none" id="cross">
-              <i class="fa-solid fa-xmark"></i>
+            
+              <i class="fa-solid fa-xmark">
+                <a href="#">{% component 'header.menu' %} </a>
+
+
+                <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
+                 
+                  <li class="d-xl-none">
+                  
+                </li>
+              </ul>
+
+              </i>
             </li>
             
             <li><a href="#">{% component 'header.menu' %} </a></li>
