--- a/src/views/layouts/master.twig
+++ b/src/views/layouts/master.twig
@@ -87,6 +87,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{ theme.settings.set('placeholder', 'images/placeholder.png') }}
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    
     <!-- To eliminate all render blocking CSS & JS and start with the critical css-->
     <!-- To show loader to the user till the page content are  loaded-->
     <style>
