--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -42,9 +42,13 @@
           </ul>
           <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
             <li class="d-xl-none" id="cross">
-            
+       
               <i class="fa-solid fa-xmark">
-                <a href="#">{% component 'header.menu' %} </a>
+                <h1>test</h1>
+                 <a href="#">{% component 'header.menu' %} </a> </i>
+
+
+                <a href="#">{% component 'header.menu' %} </a> </i>
 
 
                 <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
