--- a/src/assets/styles/05-utilities/style.css
+++ b/src/assets/styles/05-utilities/style.css
@@ -1228,6 +1228,21 @@
 
 
 
+  #horizontal-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+#horizontal-menu li {
+    margin-right: 20px;
+}
+
+#horizontal-menu li a {
+    text-decoration: none;
+    color: #000;
+}
 
 
 
