--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -31,6 +31,9 @@
       <div
         class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center"
       >
+      <a class="lg:hidden mburger mburger--collapse leading-none rtl:ml-4 ltr:mr-4" href="#mobile-menu" aria-label="Open-menu">
+        <i class="sicon-menu text-primary text-2xl"></i>
+        
         <div class="ezdan-main-menu">
           <ul class="d-flex d-xl-none align-items-center">
             <li id="bar">
@@ -42,13 +45,9 @@
           </ul>
           <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
             <li class="d-xl-none" id="cross">
-       
+            
               <i class="fa-solid fa-xmark">
-                <h1>test</h1>
-                 <a href="#">{% component 'header.menu' %} </a> </i>
-
-
-                <a href="#">{% component 'header.menu' %} </a> </i>
+                <a href="#">{% component 'header.menu' %} </a>
 
 
                 <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
