--- a/src/views/components/header/menu.twig
+++ b/src/views/components/header/menu.twig
@@ -1,3 +1,15 @@
+{#
+| Variable             | Type                   | Description                                        |
+|----------------------|------------------------|----------------------------------------------------|
+| menus                | Menu[] *Collection     | List of menus                                      |
+| menus[].has_children | Bool                   |                                                    |
+| menus[].url          | string                 |                                                    |
+| menus[].title        | string                 |                                                    |
+| menus[].attrs        | string                 | Menu dom attributes ex: ` id="offers"`             |
+| menus[].link_attrs   | string                 | Menu link dom attributes ex: `class="offers-link"` |
+| menus[].children     | Menu[] *Collection     |                                                    |
+| menus[].products     | ?Product[] *Collection | List of selected products or null                  |
+#}
 
 <nav id="mobile-menu" class="mobile-menu">
     <ul class="main-menu">
@@ -8,3 +20,4 @@
     <button class="btn--close close-mobile-menu sicon-cancel lg:hidden"></button>
 </nav>
 <button class="btn--close-sm close-mobile-menu sicon-cancel hidden"></button>
+
