--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -31,67 +31,25 @@
       <div
         class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center"
       >
-     
-        
-        <div class="ezdan-main-menu">
-          <ul class="d-flex d-xl-none align-items-center">
-            <li id="bar">
-              <i class="fa-solid fa-bars" >
-             
-             
-              
-              </i>
-              
-            </li>
-            <li>
-              <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-            </li>
-          </ul>
-          <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
-            <li class="d-xl-none" id="cross">
-              <i class="fa-solid fa-xmark"></i>
-            
-            
-              <i class="fa-solid fa-xmark">
-                <a href="#">{% component 'header.menu' %} </a>
-             
-              <i class="fa-solid fa-xmark">
-                <a href="#">{% component 'header.menu' %} </a>
-              
-                <li  {{ menu.attrs }}>
-                  {% if not menu.has_children %}
-                      <a {{ menu.link_attrs|raw }} href="{{ menu.url }}>{{ menu.title }}</a>
-                  {% else %}
-                      <span>{{ menu.title }}</span>
-                      <ul>
-                          <li><a {{ menu.link_attrs|raw }} href="{{ menu.url }}>{{ menu.title }}</a></li>
-                          {% for submenu in menu.children %}
-                              {% include _self with {menu:submenu} %}
-                          {% endfor %}
-                      </ul>
-                  {% endif %}
-              </li>
-              
-
-                  
-                  
-                </li>
-              </ul>
- 
-                </li>
-              </ul>
-
-
-              </i>
-              
-              </i>
-            </li>
-            
-            <li><a href="#">{% component 'header.menu' %} </a></li>
-            
-           
-          </ul>
-        </div>
+      <div class="ezdan-main-menu">
+        <ul class="d-flex d-xl-none align-items-center">
+          <li id="bar">
+            <i class="fa-solid fa-bars"></i>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+          </li>
+        </ul>
+        <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
+          
+            <i class="fa-solid fa-xmark"></i>
+          </li>
+          
+          <li><a href="#">{% component 'header.menu' %} </a></li>
+          
+         
+        </ul>
+      </div>
         <div class="ezdan-logo">
           <a class="" href="{{ store.url }}">
             <img  loading="eager" src="{{ store.logo }}" alt="{{ store.name }} logo">
@@ -154,9 +112,7 @@
 <nav id="Navigation">
   <div class="ezdan-navigation-wrapper">
     <div class="container">
-      <div
-        class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center"
-      >
+      <div  class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center"  >
         <div class="ezdan-main-menu">
           <ul class="d-flex d-xl-none align-items-center">
             <li id="bar">
