--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -31,25 +31,28 @@
       <div
         class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center"
       >
-      <div class="ezdan-main-menu">
-        <ul class="d-flex d-xl-none align-items-center">
-          <li id="bar">
-            <i class="fa-solid fa-bars"></i>
-          </li>
-          <li>
-            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-          </li>
-        </ul>
-        <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
-          
-            <i class="fa-solid fa-xmark"></i>
-          </li>
-          
-          <li><a href="#">{% component 'header.menu' %} </a></li>
-          
-         
-        </ul>
-      </div>
+        <div class="ezdan-main-menu">
+          <ul class="d-flex d-xl-none align-items-center">
+            <li id="bar">
+              <i class="fa-solid fa-bars"></i>
+            </li>
+            <li>
+              <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+            </li>
+          </ul>
+          <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
+            <li class="d-xl-none" id="cross">
+              <i class="fa-solid fa-xmark">
+                <Br>
+                <h1  class="lg:hidden text-sm font-bold" {{ menu.attrs }} style="text-align: center;"><a href="#">{% component 'header.menu' %} </a></h1>
+              </i>
+            </li>
+            <li class="lg:hidden text-sm font-bold" {{ menu.attrs }}></li>
+            <li><a href="#">{% component 'header.menu' %} </a></li>
+            
+           
+          </ul>
+        </div>
         <div class="ezdan-logo">
           <a class="" href="{{ store.url }}">
             <img  loading="eager" src="{{ store.logo }}" alt="{{ store.name }} logo">
@@ -112,7 +115,9 @@
 <nav id="Navigation">
   <div class="ezdan-navigation-wrapper">
     <div class="container">
-      <div  class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center"  >
+      <div
+        class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center"
+      >
         <div class="ezdan-main-menu">
           <ul class="d-flex d-xl-none align-items-center">
             <li id="bar">
