--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -41,10 +41,13 @@
             </li>
           </ul>
           <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
+            <a class="lg:hidden mburger mburger--collapse leading-none rtl:ml-4 ltr:mr-4" href="#mobile-menu" aria-label="Open-menu">
+              <i class="sicon-menu text-primary text-2xl"></i>
+              
             <li class="d-xl-none" id="cross">
               <i class="fa-solid fa-xmark">
                 <Br>
-                {{theme.setting.get('mobile_menu')}}
+            
               </i>
             </li>
             <li class="lg:hidden text-sm font-bold" {{ menu.attrs }}></li>
